istio1.5/yaml/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","istio":"ingressgateway","operator.istio.io/component":"IngressGateways","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.5.0","release":"istio"},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports":[{"name":"status-port","port":15020,"targetPort":15020},{"name":"http2","port":80,"targetPort":80},{"name":"https","port":443},{"name":"kiali","port [...]
    service.beta.kubernetes.io/cce-load-balancer-cce-add-eip: 182.61.108.242
    service.beta.kubernetes.io/cce-load-balancer-cce-add-id: lb-5da7fac2
    service.beta.kubernetes.io/cce-load-balancer-id: lb-5da7fac2
  creationTimestamp: "2020-03-28T07:23:57Z"
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.5.0
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "4097717"
  selfLink: /api/v1/namespaces/istio-system/services/istio-ingressgateway
  uid: f9252c09-02d5-4586-99cb-db237da5cbaf
spec:
  clusterIP: 172.18.21.56
  externalTrafficPolicy: Cluster
  ports:
  - name: status-port
    nodePort: 31945
    port: 15020
    protocol: TCP
    targetPort: 15020
  - name: http2
    nodePort: 32422
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 32399
    port: 443
    protocol: TCP
    targetPort: 443
  - name: kiali
    nodePort: 30133
    port: 15029
    protocol: TCP
    targetPort: 15029
  - name: prometheus
    nodePort: 32197
    port: 15030
    protocol: TCP
    targetPort: 15030
  - name: grafana
    nodePort: 32547
    port: 15031
    protocol: TCP
    targetPort: 15031
  - name: tracing
    nodePort: 30642
    port: 15032
    protocol: TCP
    targetPort: 15032
  - name: tcp
    nodePort: 30426
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: tls
    nodePort: 31099
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 182.61.108.242
