istio1.5/yaml/productpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"productpage","service":"productpage"},"name":"productpage","namespace":"default"},"spec":{"ports":[{"name":"http","port":9080}],"selector":{"app":"productpage"}}}
  creationTimestamp: "2020-04-10T02:41:10Z"
  labels:
    app: productpage
    service: productpage
  name: productpage
  namespace: default
  resourceVersion: "6367407"
  selfLink: /api/v1/namespaces/default/services/productpage
  uid: 88477364-380b-4731-bf47-a12ae57bf407
spec:
  clusterIP: 172.18.218.112
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: productpage
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
